#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Version 1.4 (2024-05-23)

- ~corfu-auto-commands~: Add ~delete-backward-char~.

* Version 1.3 (2024-04-05)

- Preserve currently selected candidate on further input. This matters if
  candidate preview is disabled (~corfu-preview-current=nil~).
- Add new command ~corfu-expand~ bound to ~M-TAB~ by default. The command expands
  the input via ~completion-try-completion~, for example the ~basic~ completion
  style expands the common prefix of all candidates.

* Version 1.2 (2024-01-23)

- Support the EXWM window manager.
- Optimization: Reduce auto completion timer overhead.
- Use ~internal-border-width~ instead of ~child-frame-border-width~.
- Internal refactoring: Do not use buffer-local variables.
- Internal refactoring: Store ~completion-extra-properties~ as part of
  ~completion-in-region--data~.

* Version 1.1 (2023-12-27)

- Deduplicate candidates with respect to ~equal-including-properties~, such that
  backends can provide equal candidate strings, which only differ in their text
  properties and annotations.
- Ensure that the string passed to the ~:exit-function~ retains the candidate
  properties, when possible. The properties are guaranteed to exist when a
  candidate is selected explicitly, but may be missing when candidates are
  completed in a stepwise manner.
- ~corfu-on-exact-match~: Add value ~show~ to the customization option. With this
  setting the Corfu popup will be shown even if there is only a single matching
  candidate.

* Version 1.0 (2023-12-01)

- Bug fixes.
- =corfu-quick=: Use a slightly different scheme to support more candidates.
- =corfu-reset=: Quit immediately if input did not change.
- Support =completion-lazy-hilit=.

* Version 0.38 (2023-08-14)

- =corfu-quick=: Bugfix.
- =corfu-mode-map=: Add mode map.
- Replace =corfu-excluded-modes= with =global-corfu-modes=, the Emacs 28 convention
  for globalized minor modes.

* Version 0.37 (2023-07-02)

- Bugfixes.