@@ -2,6 +2,15 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Development
+
+- Unbind =C-a= in =corfu-map=. This binding is only needed in modes which override
+  =C-a= instead of remapping ~move-beginning-of-line~.
+- Unbind =<tab>= in ~corfu-map~. This binding is only needed in modes which bind
+  =<tab>= instead of =TAB=, as was the case in old versions of Org. If you use such
+  a mode, please report this as a bug for this mode. In the meantime you can use
+  =(keymap-set corfu-map "<tab>" #'corfu-complete)=.
+
 * Version 1.4 (2024-05-23)
 
 - ~corfu-auto-commands~: Add ~delete-backward-char~.
